# rust-training-tool

./: Cargo.toml  README.md
src/: bin.rs  collision.rs  gui.rs  lib.rs
