[package]
name = "rust-training-tool"
version = "0.2.0"
edition = "2021"
authors = ["Emilie Dørum <emilid2103@gmail.com>"]
description = "A very simple game engine using egui. Made for a rust training session, do not use!"
license = "GPL-3.0"
repository = "https://github.com/Emilinya/rust-training-tool"

[lib]

[dependencies]
eframe = "0.29.1"
